@@ -22,6 +22,8 @@ Unreleased
 - Document `REMEMBER_COOKIE_SAMESITE` config #577
 - Revise setup.py to use README.md for long description #598
 - Various documentation corrections #484, #482, #487, #534
+- Fix `from flask_login import *` behavior, although note that
+ `import *` is not usually a good pattern in code. #485
 
 Version 0.5.0
 -------------
